# app/Http/Controllers/acad/BuzonSugerenciaController.php
@@ -71,8 +71,47 @@ class BuzonSugerenciaController extends Controller
         try {
             Gate::authorize('tiene-perfil', [[Perfil::ESTUDIANTE]]);
             $data = BuzonSugerencia::insBuzonSugerencias($request);
-            BuzonSugerenciasService::guardarArchivos($data,$request->file('fArchivos'));
+            BuzonSugerenciasService::guardarArchivos($data, $request->file('fArchivos'));
             return FormatearMensajeHelper::ok('Se ha registrado su sugerencia', $data, Response::HTTP_CREATED);
+        } catch (Exception $ex) {
+            return FormatearMensajeHelper::error($ex);
+        }
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/acad/estudiantes/buzon-sugerencias/{iSugerenciaId}/archivos",
+     *     tags={"Buzón de sugerencias"},
+     *     summary="Obtiene la lista de archivos subidos para una sugerencia.",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(ref="#/components/parameters/iCredEntPerfId"),
+     *     @OA\Parameter(
+     *         name="iSugerenciaId",
+     *         in="path",
+     *         required=true,
+     *         description="Id de la sugerencia",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Sugerencia registrada exitosamente",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="Success"),
+     *             @OA\Property(property="message", type="string", example="Se ha registrado su sugerencia"),
+     *             @OA\Property(property="data", type="int", example="ID de la sugerencia registrada")
+     *         )
+     *     ),
+     *     @OA\Response(response=400, ref="#/components/responses/400"),
+     *     @OA\Response(response=403, ref="#/components/responses/403"),
+     *     @OA\Response(response=422, ref="#/components/responses/422"),
+     * )
+     */
+    public function obtenerArchivosSugerencia($iSugerenciaId)
+    {
+        try {
+            Gate::authorize('tiene-perfil', [[Perfil::ESTUDIANTE, Perfil::DIRECTOR_IE]]);
+            $data = BuzonSugerencia::obtenerArchivosSugerencia($iSugerenciaId);
+            return FormatearMensajeHelper::ok('Datos obtenidos', $data);
         } catch (Exception $ex) {
             return FormatearMensajeHelper::error($ex);
         }
@@ -85,13 +124,6 @@ class BuzonSugerenciaController extends Controller
      *     summary="Lista las sugerencias registradas por el alumno, que no estén marcadas como eliminadas.",
      *     security={{"bearerAuth":{}}},
      *     @OA\Parameter(ref="#/components/parameters/iCredEntPerfId"),
-     *     @OA\Parameter(
-     *         name="iSugerenciaId",
-     *         in="query",
-     *         required=true,
-     *         description="Id de la sugerencia a eliminar",
-     *         @OA\Schema(type="integer")
-     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="Datos obtenidos",
@@ -123,6 +155,13 @@ class BuzonSugerenciaController extends Controller
      *     tags={"Buzón de sugerencias"},
      *     summary="Marca la sugerencia de un alumno como eliminada.",
      *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="iSugerenciaId",
+     *         in="path",
+     *         required=true,
+     *         description="Id de la sugerencia",
+     *         @OA\Schema(type="integer")
+     *     ),
      *     @OA\Parameter(ref="#/components/parameters/iCredEntPerfId"),
      *     @OA\Response(
      *         response=200,
@@ -144,6 +183,21 @@ class BuzonSugerenciaController extends Controller
             return FormatearMensajeHelper::ok('Success', null, Response::HTTP_OK);
         } catch (Exception $ex) {
             return FormatearMensajeHelper::error($ex);
+        }
+    }
+
+    public function descargarArchivosSugerencia($iSugerenciaId, $nombreArchivo)
+    {
+        try {
+            Gate::authorize('tiene-perfil', [[Perfil::ESTUDIANTE, Perfil::DIRECTOR_IE]]);
+            $data = BuzonSugerenciasService::descargarArchivo($iSugerenciaId, $nombreArchivo);
+            return response($data['contenido'], 200, [
+                'Content-Type' => 'application/pdf',
+                'Content-Disposition' => 'attachment; filename="' . $data['nombreArchivo'] . '"'
+            ]);
+        } catch (Exception $ex) {
+            return FormatearMensajeHelper::error($ex);
+            //abort(Response::HTTP_NOT_FOUND);
         }
     }
 }
